# KanyeWeast

./: .cache  .dockerignore  .gitignore  Dockerfile  README.md  caught_pokemon.txt  caught_pokemon_vivian.txt  commit_msg.txt  database.py  docker-compose.yml  get_commit_msg.sh  main.py  main_old.py  national-dex.txt  pyproject.toml  pyrightconfig.json  requirements.txt  requirements2.txt  requirements_old.txt  roasts.txt  run_bot.sh  secrets.json  test.py  test1.py  water_pokemon.txt
.github/workflows/: docker-image.yml  pipreqs.yml
.upm/: store.json  store.json742355588.json  store.json910576809.json
cogs/: CustomPaginator.py  dev.py  errorhandler.py  globallisteners.py  loops.py  lyrics.py  misc.py  music.py  pics.py  template_cog.py  trivia.py  users.py  utils.py
lyrics/d/: Lyrics_CarePackage_withList.json  Lyrics_CertifiedLoverBoy_withList.json  Lyrics_ComebackSeason_withList.json  Lyrics_DarkLaneDemoTapes_withList.json  Lyrics_HonestlyNevermind_withList.json  Lyrics_IfYoureReadingThisItsTooLate_withList.json  Lyrics_MoreLife_withList.json  Lyrics_NothingWastheSame_withList.json  Lyrics_RoomforImprovement_withList.json  Lyrics_ScaryHours_withList.json  Lyrics_Scorpion_withList.json  Lyrics_SoFarGone_withList.json  Lyrics_TakeCare_withList.json  Lyrics_ThankMeLater_withList.json  Lyrics_TheBestintheWorldPack_withList.json  Lyrics_Views_withList.json  Lyrics_WhataTimeToBeAlive_withList.json
lyrics/k/: Lyrics_808sHeartbreak_withList.json  Lyrics_Donda_withList.json  Lyrics_Graduation_withList.json  Lyrics_JESUSISKING_withList.json  Lyrics_Yeezus_withList.json  (+8 more)
(+9 files in other folders)
