[tool.poetry]
name = "repl_python3_KanyeWeast"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
Flask = "^2.0.1"
colorthief = "^0.2.1"
lyricsgenius = "^3.0.1"
replit = "^3.2.4"
pandas = "^1.3.3"
PyNaCl = "^1.4.0"
google-api-python-client = "^2.52.0"
google-auth-oauthlib = "^0.5.2"
consultor = "^0.2.0"
spotipy = "^2.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
